Upgrade to SBT 1.1.0