@@ -4,8 +4,12 @@ organization := "net.hamnaberg.sbt"
 
 sbtPlugin := true
 
-libraryDependencies += "net.hamnaberg" %% "scala-archiver" % "0.2.0"
+libraryDependencies += "net.hamnaberg" %% "scala-archiver" % "0.3.0-SNAPSHOT"
 
 scalacOptions := Seq("-deprecation")
 
-ScriptedPlugin.scriptedSettings
+scriptedLaunchOpts := { scriptedLaunchOpts.value ++
+  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + (version in ThisBuild).value)
+}
+
+scriptedBufferLog := false
